--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
+  "name": "react",
+  "version": "1.0.0",
+  "description": "React project",
+  "keywords": [
+    "react",
+    "starter"
+  ],
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
+  },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "antd": "^5.23.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "parcel": "^2.13.3"
-  }
+    "parcel": "^2.13.3",
+    "process": "^0.11.10"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
